2.3.1: fix pointer cursor on mobile

--- a/static/css/photos.css
+++ b/static/css/photos.css
@@ -801,7 +801,8 @@ body.slideshow {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 
 body.slideshow video {
